--- a/package.json
+++ b/package.json
@@ -1,9 +1,23 @@
 {
-  "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
-    "hardhat": "^2.10.1"
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.3",
+    "hardhat-deploy": "^0.11.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0",
+    "hardhat-gas-reporter": "^1.0.8"
   }
 }
